# pricr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  manual-build.yml  release.yml
nix/: package.nix
src/: calc.rs  config.rs  error.rs  main.rs
src/output/: chart.rs  json.rs  mod.rs  table.rs
src/provider/: cache.rs  coingecko.rs  coinmarketcap.rs  frankfurter.rs  mod.rs  stooq.rs  yahoo.rs
tests/: provider_api_mock.rs  provider_api_replay.rs
