[package]
name = "cryptoprice"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.17", features = ["ansi"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
wiremock = "0.6"
